removed commented out code. Might try make filter work on other branch but keeping this as a clean version

--- a/MAT510CaseStudy1.ipynb
+++ b/MAT510CaseStudy1.ipynb
@@ -920,7 +920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -942,9 +942,6 @@
     "        initial_category = random.choice(categorical_columns) if len(categorical_columns) > 0 else None #randomise the category column\n",
     " \n",
     "    app.layout = html.Div([\n",
-    "        #dcc.Store(id='stored-data', data=data.to_dict()),\n",
-    "       # dcc.Store(id='previous-selected-values'),\n",
-    "       # dcc.Store(id='previous-selected-category'),\n",
     "        html.Div([\n",
     "            html.Label(\"Select Category:\"),\n",
     "            dcc.Dropdown(categorical_columns, initial_category, id='dropdown-category-selection')\n",
@@ -953,11 +950,6 @@
     "            html.Label(\"Select Values Within Category Column:\"),\n",
     "            dcc.Dropdown(id='dropdown-value-selection', multi=True, value=[])\n",
     "        ], style={'display': 'inline-block', 'width': '30%', 'verticalAlign': 'top', 'marginRight': '20px', 'background-color': 'coral'}),\n",
-    "        # html.Div([\n",
-    "        #     html.Label(\"Filter by value \"),\n",
-    "        #     dcc.Dropdown(numerical_columns, numerical_columns[0], id='filter-selection'),\n",
-    "        #     dcc.Slider(id='value-slider', step=1)\n",
-    "        # ], style={'display': 'inline-block', 'width': '30%', 'verticalAlign': 'top', 'marginRight': '20px', 'background-color': 'coral'}),\n",
     "         html.Div([\n",
     "            html.Label(\"X-Axis\"),\n",
     "            dcc.Dropdown(numerical_columns, numerical_columns[0], id='dropdown-x-selection')\n",
@@ -971,51 +963,13 @@
     "        ], style={'marginTop': '20px', 'background-color': 'coral'}),\n",
     "        dcc.Graph(id='graph-content')\n",
     "    ])\n",
-    "    # # Callback to update the slider based on the selected category\n",
-    "    # @callback(\n",
-    "    #     Output('value-slider', 'min'),\n",
-    "    #     Output('value-slider', 'max'),\n",
-    "    #     Output('value-slider', 'marks'),\n",
-    "    #     Output('value-slider', 'value'),\n",
-    "    #     Input('filter-selection', 'value'),\n",
-    "    #     State('stored-data', 'data')\n",
-    "    # )\n",
-    "    # def update_slider(selected_category, stored_data):\n",
-    "    #     df = h.pd.DataFrame(stored_data)\n",
-    "    #     # Get min and max based on the selected category\n",
-    "    #     min_value = df[selected_category].min()\n",
-    "    #     max_value = df[selected_category].max()\n",
-    "    #     marks = {i: str(i) for i in range(int(min_value), int(max_value) + 1, (max_value - min_value) // 5 or 1)}  # Dynamically create marks with step based on range\n",
-    "    #     return min_value, max_value, marks, min_value  # Default to the min value\n",
-    "    \n",
-    "    # @callback(\n",
-    "    #     Output('stored-data', 'data'), \n",
-    "    #     Input('filter-selection', 'value'),\n",
-    "    #     Input('value-slider', 'value'),\n",
-    "    #     State('stored-data', 'data')\n",
-    "    # )\n",
-    "    # def filter_by_numerical_category(filter_category, slider_value, stored_data):\n",
-    "    #     df = h.pd.DataFrame(stored_data)\n",
-    "    #     filtered_data = df[df[filter_category] >= slider_value]\n",
-    "    #     return filtered_data.to_dict()\n",
-    "\n",
     "    # Update the values dropdown based on the selected categorical column\n",
     "    @callback(\n",
     "        Output('dropdown-value-selection', 'options'),\n",
     "        Output('dropdown-value-selection', 'value'),  # Output the random value\n",
     "        Input('dropdown-category-selection', 'value')\n",
-    "       # State('stored-data', 'data'),\n",
-    "        # State('previous-selected-values', 'data'),  # Get the current options\n",
-    "       # State('previous-selected-category', 'data')  # Get the current options\n",
     "    )\n",
-    "    def update_value_options(selected_category):#, stored_data, previous_options, previous_category):\n",
-    "        #df = h.pd.DataFrame(stored_data)\n",
-    "        # Get the unique values of the selected categorical column\n",
-    "        \n",
-    "       # if selected_category == previous_category:\n",
-    "      #      return previous_options\n",
-    "        \n",
-    "       # else:\n",
+    "    def update_value_options(selected_category):\n",
     "        if(using_index):\n",
     "            return 0\n",
     "        else:\n",
@@ -1033,11 +987,8 @@
     "        Input('dropdown-x-selection', 'value'),\n",
     "        Input('dropdown-y-selection', 'value'),\n",
     "        Input('regression-toggle', 'value')\n",
-    "        #State('stored-data', 'data')\n",
     "    )\n",
-    "    def update_graph(category_column, selected_values, valuex, valuey, regression_toggle): #, stored_data):\n",
-    "        #df = h.pd.DataFrame(stored_data)\n",
-    "\n",
+    "    def update_graph(category_column, selected_values, valuex, valuey, regression_toggle):\n",
     "        if selected_values:\n",
     "            dff = data[data[category_column].isin(selected_values)]\n",
     "            \n",
@@ -1048,7 +999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -1066,53 +1017,11 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x2acd5398d10>"
+       "<IPython.lib.display.IFrame at 0x2acd670be90>"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "---------------------------------------------------------------------------\n",
-      "UnboundLocalError                         Traceback (most recent call last)\n",
-      "Cell In[43], line 89, in compare_axes.<locals>.update_value_options(selected_category='artists')\n",
-      "     77 @callback(\n",
-      "     78     Output('dropdown-value-selection', 'options'),\n",
-      "     79     Output('dropdown-value-selection', 'value'),  # Output the random value\n",
-      "   (...)\n",
-      "     86     #df = h.pd.DataFrame(stored_data)\n",
-      "     87     # Get the unique values of the selected categorical column\n",
-      "---> 89     if selected_category == previous_category:\n",
-      "        selected_category = 'artists'\n",
-      "     90         return previous_options\n",
-      "     92     else:\n",
-      "\n",
-      "UnboundLocalError: cannot access local variable 'previous_category' where it is not associated with a value\n",
-      "\n",
-      "---------------------------------------------------------------------------\n",
-      "UnboundLocalError                         Traceback (most recent call last)\n",
-      "Cell In[43], line 119, in compare_axes.<locals>.update_graph(\n",
-      "    category_column='artists',\n",
-      "    selected_values=[],\n",
-      "    valuex='popularity',\n",
-      "    valuey='duration_ms',\n",
-      "    regression_toggle=[]\n",
-      ")\n",
-      "    116     dff = data[data[category_column].isin(selected_values)]\n",
-      "    118 trendline = \"ols\" if \"show\" in regression_toggle else None  #sometimes it takes a little time for the regression line to appear on first loading up the notebook\n",
-      "--> 119 return px.scatter(dff, valuex, valuey, color=category_column, trendline=trendline, trendline_color_override='red')\n",
-      "        trendline = None\n",
-      "        valuex = 'popularity'\n",
-      "        valuey = 'duration_ms'\n",
-      "        px = <module 'plotly.express' from 'c:\\\\Users\\\\hamis\\\\repos\\\\MAT510\\\\.venv\\\\Lib\\\\site-packages\\\\plotly\\\\express\\\\__init__.py'>\n",
-      "        category_column = 'artists'\n",
-      "\n",
-      "UnboundLocalError: cannot access local variable 'dff' where it is not associated with a value\n",
-      "\n"
-     ]
     }
    ],
    "source": [
