--- a/MAT510CaseStudy1.ipynb
+++ b/MAT510CaseStudy1.ipynb
@@ -6,7 +6,9 @@
    "source": [
     "## 2002431 MSc Applied AI & UX\n",
     "### MAT510 Introduction to Data Science\n",
-    "#### Case Study 1 "
+    "#### Case Study 1 \n",
+    "\n",
+    "Please refer to the readme for details on the categories within the dataset"
    ]
   },
   {
@@ -21,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +175,7 @@
     "if not os.path.exists(filename):\n",
     "    edited_df.to_csv(filename, index=False)\n",
     "else:\n",
-    "    print(f\"The file '{filename}' already exists.\")\n"
+    "    print(f\"The file '{filename}' already exists.\")"
    ]
   },
   {
@@ -213,27 +215,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def convert_ms_array(my_map : map):\n",
-    "    if 'duration_ms' in my_map['Column']:\n",
-    "        index = my_map['Column'].index('duration_ms')\n",
-    "        for key in my_map:\n",
-    "            my_map[key][index] = h.ms_to_minutes_seconds(my_map[key][index])\n",
-    "        return my_map"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_map_stats = convert_ms_array(data_map_stats) #lets convert the duration in miliseconds to minutes and seconds so its easier to read\n",
-    "popularity77_map_stats = convert_ms_array(popularity77_map_stats)\n",
-    "popularity90_map_stats = convert_ms_array(popularity90_map_stats)\n",
+    "data_map_stats = h.convert_ms_array(data_map_stats) #lets convert the duration in miliseconds to minutes and seconds so its easier to read\n",
+    "popularity77_map_stats = h.convert_ms_array(popularity77_map_stats)\n",
+    "popularity90_map_stats = h.convert_ms_array(popularity90_map_stats)\n",
     "print(\"Total dataset\")\n",
     "data_map_stats_df = pd.DataFrame(data_map_stats)\n",
     "data_map_stats_df"
@@ -269,13 +257,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -284,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
