fixed example edited sets. Added more insights into data in markdown blocks

--- a/MAT510CaseStudy1.ipynb
+++ b/MAT510CaseStudy1.ipynb
@@ -139,7 +139,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## The following code blocks use pandas "
+    "### Run the following code block to create a new dataset from the initial set by selecting for numerical values\n"
    ]
   },
   {
@@ -151,7 +151,8 @@
     "edited_df = ph.edit_dataframe(df) #this function can be used to edit a data frame using text inputs\n",
     "\n",
     "ph.number_of_entries(edited_df)\n",
-    "ph.descriptive_stats_extended(edited_df)"
+    "ph.descriptive_stats_extended(edited_df)\n",
+    "ph.data_summary(edited_df)"
    ]
   },
   {
@@ -163,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +183,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here are some edited csv files I prepared. Lets use the load_csv_as_map function to have a look at them."
+    "Here are some edited csv files I prepared earlier. I selected for popularity to see if increasing popularity would affect any of the other data points. Lets use the load_csv_as_map function to have a look at them."
    ]
   },
   {
@@ -191,12 +192,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "popularity77_map = h.load_csv_as_map('popularity77.csv')\n",
+    "popularity50_map = h.load_csv_as_map('popularity50.csv')\n",
     "\n",
-    "h.number_of_entries(popularity77_map)\n",
+    "h.number_of_entries(popularity50_map)\n",
     "\n",
-    "popularity77_map_stats = h.descriptive_stats(popularity77_map)\n",
-    "pd.DataFrame(popularity77_map_stats) #put it into a dataframe to make it easier to read in output"
+    "\n",
+    "popularity50_map_stats = h.descriptive_stats(popularity50_map)\n",
+    "pd.DataFrame(popularity50_map_stats) #put it into a dataframe to make it easier to read in output"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "popularity67_map = h.load_csv_as_map('popularity67.csv')\n",
+    "\n",
+    "h.number_of_entries(popularity67_map)\n",
+    "\n",
+    "popularity67_map_stats = h.descriptive_stats(popularity67_map)\n",
+    "pd.DataFrame(popularity67_map_stats) #put it into a dataframe to make it easier to read in output"
    ]
   },
   {
@@ -220,7 +236,8 @@
    "outputs": [],
    "source": [
     "data_map_stats = h.convert_ms_array(data_map_stats) #lets convert the duration in miliseconds to minutes and seconds so its easier to read\n",
-    "popularity77_map_stats = h.convert_ms_array(popularity77_map_stats)\n",
+    "popularity50_map_stats = h.convert_ms_array(popularity50_map_stats)\n",
+    "popularity67_map_stats = h.convert_ms_array(popularity67_map_stats)\n",
     "popularity90_map_stats = h.convert_ms_array(popularity90_map_stats)\n",
     "print(\"Total dataset\")\n",
     "data_map_stats_df = pd.DataFrame(data_map_stats)\n",
@@ -233,8 +250,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(\"Popularity over 77\")\n",
-    "popularity77_map_stats_df = pd.DataFrame(popularity77_map_stats)\n",
+    "print(\"Popularity over 50\")\n",
+    "popularity50_map_stats_df = pd.DataFrame(popularity50_map_stats)\n",
+    "popularity50_map_stats_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"Popularity over 67\")\n",
+    "popularity77_map_stats_df = pd.DataFrame(popularity67_map_stats)\n",
     "popularity77_map_stats_df"
    ]
   },
@@ -253,7 +281,43 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As we can see the range of song durations decreases significantly as the popularity increases. "
+    "If we observe the Range column, we can see that the range of values in every category except mode decreases significantly as the popularity increases. Perhaps this suggests that the most popular songs are similar? Or it could be identifying a current trend in music taste of the majority of listeners.\n",
+    "\n",
+    "If we look at the Mean column we can see that danceability, key and energy increased on average as popularity increased. We can also see that average loudness and duration_ms decreased as popularity increased."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ph.data_summary(pd.DataFrame(popularity50_map))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ph.data_summary(pd.DataFrame(popularity67_map))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ph.data_summary(pd.DataFrame(popularity90_map))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Using the data summary function we can clearly see a reduction in the number of unique values as the popularity increases. Over 90 popularity, we only have 98 tracks remaining out of the original 114,000 songs (0.085% of the dataset remaining!). Of which there are only 22 genres, 35 albums and 39 artists."
    ]
   },
   {
